--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<title>Payments Page</title>
 		<!-- CSS Files -->
 		<link rel="stylesheet" href="css/payments.css" />
+		<!-- Redirect JS -->
+		<script src="./js/redirect.js"></script>
 	</head>
 	<body>
 		<header class="main-bar">
