--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 	<body>
 		<div class="login-div">
 			<h1>Login</h1>
-			<form action="" method="POST">
+			<form action="">
 				<input
 					type="email"
 					name="email"
@@ -27,5 +27,6 @@
 				<input type="submit" value="Ingresar" />
 			</form>
 		</div>
+		<script src="./js/login.js"></script>
 	</body>
 </html>
